# agb

./: .gitignore  ANBGitBridge.c  ANBGitBridge.h  CMakeLists.txt  Makefile  README.md  SConstruct  dummy.c
include/: agb.h  anbgitbridge.h
include/agb/: status.h
include/agb/internal/: eh.h  types.h
include/anbgitbridge/internal/: eh.h  types.h
old/: ANBGitBridge.c  ANBGitBridge.h  dummy.c
src/core/: branch.c  core.c  eh.c  fetch.c  merge.c  status.c  sync_files.c
tests/: Makefile  test.c
tests/clar/: print.h
tests/core/: branch.c  compare.c  fetch.c  merge.c  status.c  sync.c
tests/utils/: clarx.c  clarx.h  test_utils.c  test_utils.h  test_utils_x.cxx  test_utils_x.h
utils/src/: get_commit_info.c
